# vgws

./: .atom-build.yml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .yarnrc  README.md  TODO.md  api.php  build.py  buildconf.example.yml  composer.json  config.php.dist  convertSQLToMigration.py  crab.webm  index.php  lobbytool.py  package.json  pip.json  pyproject.toml  requirements-dev.txt  requirements.txt  style.php  vnm.yml  webpack.config.js
classes/: Admin.class.php  Assets.class.php  BaseHandler.class.php  DB.class.php  DBTable.class.php  Debug.class.php  Debug.php  Jobs.class.php  Page.class.php  Poll.class.php  Router.class.php  Router.php  SCSS.class.php  SCSS.php  SCSSServer.php  TwigExtensions.class.php  classes.php  funcs.php
classes/Auth/: Admin.php  AdminSession.php
classes/Content/: ActionHandler.php  AdminActionHandler.php  Assets.php  BaseHandler.php  ExternalLinkHandler.php  Message.php  Page.php
classes/Database/: CompoundInsert.php  DB.php  DBTable.php  PDO-adapter.class.php  Translator.php
classes/HTML/: Dialog.class.php  Dialog.php  Element.class.php  KuForm.class.php  PForm.class.php  PForm.php  PiecemealForm.php  QF.php  Select.php
coffee/: bans.coffee  byond.coffee  editpoll.coffee  editpoll.multichoice.coffee  rapsheet.coffee  vgws.coffee
data/: jobs.json
devtools/: build.py  fixFilePathing.py  lobbytool.py
htdocs/: index.php  style.css  style.php
lobbyscreens/: README.md
style/: _funcs.scss  lobby.scss  style.scss
templates/: error.tpl.php  macros.twig  wrapper.tpl.php  wrapper.twig
(+73 files in other folders)
